# Smart-Study-Assistant

./: .env  .gitignore  AI_CHATBOT_IMPLEMENTATION_GUIDE.md  README.md  SETUP.md  package.json  pyproject.toml  requirements.txt  setup.py  start-dev.bat  test_setup.py
backend/: .env  CHAIN_OF_THOUGHT_PROMPTING.md  GEMINI_SETUP.md  MULTI_SHOT_PROMPTING.md  ONE_SHOT_PROMPTING.md  RTFC_FRAMEWORK.md  TOKEN_LOGGING.md  ZERO_SHOT_PROMPTING.md  ask.js  chain-of-thought.js  demo-chain-of-thought.js  demo-multi-shot.js  demo-one-shot.js  demo-zero-shot.js  evaluate.js  multi-shot.js  one-shot.js  package-lock.json  package.json  q.js  render.yaml  rtfc.js  test-api.js  test-zero-shot-api.js  token-stats.js  verify-deployment.js  zero-shot.js
backend/evaluation/: dataset.json  judge.js  metrics.js  report-generator.js  test-runner.js
backend/evaluation/results/: evaluation-report-2025-08-23T05-55-33-276Z.json  evaluation-report-2025-08-23T06-02-19-563Z.json  (+6 more)
backend/src/: index.js
config/: __init__.py  config.py
data/sample_documents/: sample.txt  sample_ml_notes.md
frontend/: .env  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
src/: __init__.py  app.py
src/core/: __init__.py  ai_client.py  embeddings.py  prompts.py  vector_db.py
src/evaluation/: judge_prompts.py  test_dataset.py  testing_framework.py
src/features/: flashcard_generator.py  question_answering.py  quiz_generator.py  reminder_system.py
src/utils/: __init__.py  document_processor.py  similarity_metrics.py  token_counter.py
tests/: test_sample.py
(+17 files in other folders)
