[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-study-assistant"
version = "0.1.0"
description = "AI-powered tutor with RAG, structured outputs, and function calling"
authors = [{name = "Student"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]